--- a/.gitignore
+++ b/.gitignore
@@ -11,5 +11,7 @@
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
 
+# Don't want IDE specific stuff
 .idea
 vendor
+.vscode
